k8s/namespace-kube.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: nestjs-microservices
  name: nestjs-microservices
