k8s/api-gateway-deployment-kube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  labels:
    app: nestjs-microservices
    tier: backend
spec:
  selector:
    matchLabels:
      name: api-gateway-pod
      app: nestjs-microservices
  replicas: 3
  template:
    metadata:
      name: api-gateway-pod
      labels:
        name: api-gateway-pod
        app: nestjs-microservices
    spec:
      containers:
        - name: api-gateway
          image: dmutre/microservice-api-gateway
          ports:
            - containerPort: 3000
