k8s/api-gateway-pod-kube.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-gateway-pod
  labels:
    name: api-gateway-pod
    app: nestjs-microservice
spec:
  containers:
    - name: api-gateway
      image: dmutre/microservice-api-gateway
      ports:
        - containerPort: 3000
