k8s/mail-service-pod-kube.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mail-pod
  labels:
    name: mail-pod
    app: nestjs-microservices
spec:
  containers:
    - name: mail
      image: dmutre/microservice-api-mail
