k8s/postgres-pod-kube.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: nestjs-microservices
  name: postgres-pod
  labels:
    name: postgres-pod
    app: nestjs-microservice
spec:
  containers:
    - name: postgres
      image: postgres
      command: ["/bin/bash", "../init-db.sh"]
      ports:
        - containerPort: 5432
      volumeMounts:
        - name: postgres-volume
          mountPath: /var/lib/postgresql/data
          subPath: postgres-12.x.x-var-lib-postgresql-data
      volumes:
      - name: postgres-volume
        persistentVolumeClaim:
          claimName: postgres-pvc
