k8s/product-pod-kube.yaml
apiVersion: v1
kind: Pod
metadata:
  name: product-pod
  labels:
    name: product-pod
    app: nestjs-microservices
spec:
  containers:
    - name: product
      image: dmutre/microservice-api-products
