k8s/rabbitmq-pod-kube.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rabbitmq-pod
  namespace: nestjs-microservices
  labels:
    app: nestjs-microservices
    name: rabbitmq-pod
spec:
  containers:
    - name: rabbitmq
      image: rabbitmq:3-management
      ports:
        - containerPort: 5672
        - containerPort: 15672
      volumeMounts:
        - name: rabbitmq-pvc
          mountPath: /var/lib/rabbitmq
  volumes:
    - name: rabbitmq-pvc
      persistentVolumeClaim:
        claimName: rabbitmq-pvc
