k8s/user-pod-kube.yaml
apiVersion: v1
kind: Pod
metadata:
  name: user-pod
  labels:
    name: user-pod
    app: nestjs-microservice
spec:
  containers:
    - name: user
      image: dmutre/microservice-api-users
