k8s/api-gateway-service-kube.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  labels:
    app: nestjs-microservices
    name: api-gateway-service
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: nestjs-microservices
    name: api-gateway-pod
