k8s/product-service-kube.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: nestjs-microservices
    name: product-service
spec:
  type: ClusterIP
  ports:
    - port: 3004
      targetPort: 3004
  selector:
    app: nestjs-microservices
    name: product-pod
