k8s/rabbitmq-service-kube.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  labels:
    app: nestjs-microservices
    name: rabbitmq-service
spec:
  type: ClusterIP
  ports:
    - port: 5672
      targetPort: 5672
  selector:
    app: nestjs-microservices
    name: rabbitmq-pod
