k8s/user-service-kube.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: nestjs-microservices
    name: user-service
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: nestjs-microservices
    name: user-pod
